--- a/SimpleLearnAdmin/nbproject/project.properties
+++ b/SimpleLearnAdmin/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=SimpleLearn
-application.vendor=Alexander
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -25,17 +24,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SimpleLearn.jar
+dist.jar=${dist.dir}/SimpleLearnAdmin.jar
 dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
 excludes=
-file.reference.java-json.jar-1=Libs\\java-json.jar
-file.reference.unirest-java-1.4.9.jar=Libs/unirest-java-1.4.9.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.unirest-java-1.4.9.jar}:\
-    ${file.reference.java-json.jar-1}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -60,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=simplelearn.SimpleLearn
+main.class=simplelearnadmin.SimpleLearnAdmin
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
